[package]
name = "reqwest-pretty-json"
version = "0.1.2" # remember to update html_root_url
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
categories = ["web-programming::http-client", "value-formatting"]
keywords = ["reqwest", "pretty", "json"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://gitlab.com/imp/reqwest-pretty-json.git"
edition = "2018"
description = "Easy way to emit prettified JSON body via reqwest::RequestBuilder"

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
