[package]
name = "reqwest-pretty-json"
version = "0.10.1" # remember to update html_root_url
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
categories = ["web-programming::http-client", "value-formatting"]
keywords = ["reqwest", "pretty", "json"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://gitlab.com/imp/reqwest-pretty-json.git"
edition = "2018"
description = "Easy way to emit prettified JSON body via reqwest::RequestBuilder"

[dependencies]
reqwest = { version = "0.10", default-features = false, features = ["json"] }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "0.2", default-features = false, features = ["macros"] }
[features]
blocking = ["reqwest/blocking"]
default = ["blocking"]
